# collective-accounting

./: .gitignore  README.md  cli.py  list_operations.py  main.py  make_test_ledger.fish  models.py  pyproject.toml  test_models.py
collective_accounting/: __init__.py  account.py  cli.py  display.py  ledger.py  logging.py  models.py  models_next.py  money.py  operations.py  utils.py
demo/: ledger_medusa.yml  ledger_simple.yml  ledger_with_pot.yml
lausa/: cli.py  display.py  io.py  ledger.py  logging.py  money.py  operations.py
tests/: test_account.py  test_display.py  test_io.py  test_ledger.py  test_models.py  test_models_next.py  test_money.py  test_operations.py  test_utils.py
