[project]
name = "collective_accounting"
version = "0.1.0"
description = "Ledger for collective accounting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.2.1", "funcy>=2.0", "loguru>=0.7.3", "rich>=14.1.0"]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-mock>=3.14.1"]

[project.scripts]
accountant = "collective_accounting.cli:main"

[tool.uv]
package = true # required for scripts to be installed
