[project]
name = "lausa"
version = "0.8.0"
description = "Ledger for collective accounting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.2.1",
    "funcy>=2.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-mock>=3.14.1"]

[project.scripts]
accountant = "lausa.cli:main"

[tool.uv]
package = true # required for scripts to be installed

[tool.setuptools]
packages = ["lausa"]

[tool.bumpversion]
current_version = "0.8.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
